# sales-data-pipeline

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/raw/: sales_orders.csv
src/sales_pipeline/: __init__.py  cleaning.py  cli.py  config.py  exceptions.py  ingestion.py  pipeline.py  reconciliation.py  reporting.py  transformation.py  validation.py
tests/: conftest.py  test_cleaning.py  test_cli.py  test_ingestion.py  test_pipeline.py  test_reconciliation.py  test_reporting.py  test_transformation.py  test_validation.py
