[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "sales-data-pipeline"
version = "1.0.0"
description = "A tested Python pipeline for validating, cleaning, transforming, and reporting sales data."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Jinyan Shao"}]
dependencies = ["pandas>=2.1,<3.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0", "pytest-cov>=5.0,<7.0", "ruff>=0.12,<1.0"]

[project.scripts]
sales-pipeline = "sales_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["sales_pipeline"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 85

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
